<resources>
    <string name="app_name">MasterProject</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="drawer_home_long">Back to Main Screen</string>
    <string name="drawer_settings_long">Change App Settings</string>
    <string name="drawer_about_long">About Us</string>
    <string name="menu_option_add">Add to Favourites</string>
    <string name="menu_option_edit">Edit</string>
    <string name="drawer_fav">Favourites</string>
    <string name="drawer_fav_long">Check favourites list</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_search_long">Search database for actors</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait</string>
    <string name="no_internet">No Internet</string>
    <string name="autosync_problem">Autosync Problem</string>
    <string name="autosync_warning">Autosync Warning</string>
    <string name="connect_to_wifi">Connect to WiFi</string>
    <string name="autosync">Autosync</string>
    <string name="sync_in_progress">Sync in progress</string>
    <string name="actor_details">Actor Details</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="deleted">Deleted</string>
    <string name="entries_deleted_no">Entries deleted:</string>
    <string name="error">Error</string>
    <string name="actors">Actors</string>
    <string name="favourites">Favorites</string>
    <string name="movies">Movies</string>
    <string name="movie_details">Movie Details</string>
    <string name="actor_added_to_favorites">Actor added to Favorites</string>
    <string name="please_try_again_later">Please, try again later</string>
    <string name="movie_added_to_favorites">Movie added to Favorites</string>
    <string name="search">Search</string>
    <string name="notify_via_toasts">Notify with Toasts</string>
    <string name="show_notif_as_toast">Show notifications as Toast message</string>
    <string name="notify_via_statusbar">Notify on Status Bar</string>
    <string name="show_notif_on_statusbar">Show notifications on Status Bar</string>
    <string name="notify_via_dialog">Notify with Dialog</string>
    <string name="user_notification">User notification</string>
    <string name="preserve_data">Preserve data</string>
    <string name="only_conn_wifi">Only connect over WiFi</string>
    <string name="author">Author</string>
    <string name="powered_by">Powered by</string>
    <string name="aborted">Aborted</string>
    <string name="not_on_wifi">Not on Wifi!</string>
    <string name="conn_only_wifi">conn_only_wifi</string>
    <string name="splash_screen_on">splash_screen_on</string>
    <string name="author_name">Nebojsa Matic</string>
    <string name="use_dark_theme">use_dark_theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_summary">Use dark theme for app interface</string>
    <string name="no_wifi_warning">No-WiFi Warning</string>
    <string name="no_wifi_warning_summary">Warn when not connected over Wifi</string>
    <string name="allow_autosync">Allow Autosync</string>
    <string name="allow_autosync_summary">Allow app to check connection</string>
    <string name="notify_user_list">notify_user_list</string>
    <string name="notify_user_method">Notify user method</string>
    <string name="notify_user_method_summary">Choose how to receive feedback</string>
    <string name="url_getapikey">https://www.themoviedb.org/account/signup</string>
    <string name="your_api_key">Your API Key</string>
    <string name="your_api_key_summ">Enter your key for TMDB API interface</string>
    <string name="get_api_key">Get API key</string>
    <string name="get_api_key_summ">Go to TMDB page and get your API key</string>
    <string name="conn_settings">Connectivity Settings</string>
    <string name="warn_no_wifi">warn_no_wifi</string>
    <string name="success">Success</string>
    <string name="tmdb_api_key">tmdb_api_key</string>
    <string name="conn_type_wifi">WiFi</string>
    <string name="conn_type_cell_data">Cellular data</string>

</resources>
