<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Visual">

        <SwitchPreference
            android:key="@string/splash_screen_on"
            android:title="Show splash screen"
            android:summary="Display splash screen on startup"
            android:defaultValue="false"/>

        <SwitchPreference
            android:key="@string/use_dark_theme"
            android:title="@string/dark_theme"
            android:summary="@string/dark_theme_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/user_notification"
        android:key="sync_settings">

        <ListPreference
            android:title="@string/notify_user_method"
            android:summary="@string/notify_user_method_summary"
            android:key="@string/notify_user_list"
            android:entries="@array/notify_options_names"
            android:entryValues="@array/notify_options_values"
            android:defaultValue="@string/notify_via_toasts"
            />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/conn_settings"
        android:key="conn_settings">

        <CheckBoxPreference
            android:key="@string/conn_only_wifi"
            android:title="@string/preserve_data"
            android:summary="@string/only_conn_wifi"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="@string/warn_no_wifi"
            android:title="@string/no_wifi_warning"
            android:summary="@string/no_wifi_warning_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="app_specific"
        android:title="App specific">

        <EditTextPreference
            android:key="@string/tmdb_api_key"
            android:title="@string/your_api_key"
            android:summary="@string/your_api_key_summ"/>

        <Preference
            android:title="@string/get_api_key"
            android:summary="@string/get_api_key_summ">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_getapikey"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>